fixing linked stylesheet and removing clippy

--- a/src/assets/win95.css
+++ b/src/assets/win95.css
@@ -45,9 +45,8 @@ Header
 */
 header {
   position: relative;
-  background-color: black;
-  height: 100vh;
-  min-height: 25rem;
+  height: 100%;
+  min-height: 50px;
   width: 100%;
   overflow: hidden;
 }
